--- a/PlatformIO/RECV_multiPoint_DS18B20/platformio.ini
+++ b/PlatformIO/RECV_multiPoint_DS18B20/platformio.ini
@@ -8,8 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bee_s3]
+[env:esp-wrover-kit]
 platform = espressif32
-board = bee_s3
+board = esp-wrover-kit
 framework = arduino
+
 lib_extra_dirs = ~/Documents/Arduino/libraries
+
+
+monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
+build_type = debug
+
+upload_port = COM3
