--- a/PlatformIO/XMIT_mP_BeeS3_DS18B20/platformio.ini
+++ b/PlatformIO/XMIT_mP_BeeS3_DS18B20/platformio.ini
@@ -13,10 +13,11 @@ platform = espressif32
 board = bee_s3
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-
-
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 build_type = debug
-
 upload_port = COM17
+monitor_port = COM19
+
+[platformio]
+description = Host for 5 temp sensors
